# SPDX-License-Identifier: Apache-2.0

add_definitions(-D__ZEPHYR_SUPERVISOR__)

add_subdirectory(console)
add_subdirectory(interrupt_controller)

add_subdirectory_if_kconfig(adc)
add_subdirectory_if_kconfig(clock_control)
add_subdirectory_if_kconfig(counter)
add_subdirectory_if_kconfig(crypto)
add_subdirectory_if_kconfig(display)
add_subdirectory_if_kconfig(dma)
add_subdirectory_if_kconfig(gpio)
add_subdirectory_if_kconfig(grove)
add_subdirectory_if_kconfig(i2c)
add_subdirectory_if_kconfig(i2s)
add_subdirectory_if_kconfig(ieee802154)
add_subdirectory_if_kconfig(ipm)
add_subdirectory_if_kconfig(led)
add_subdirectory_if_kconfig(led_strip)
add_subdirectory_if_kconfig(modem)
add_subdirectory_if_kconfig(pcie)
add_subdirectory_if_kconfig(pinmux)
add_subdirectory_if_kconfig(pwm)
add_subdirectory_if_kconfig(rtc)
add_subdirectory_if_kconfig(sensor)
add_subdirectory_if_kconfig(spi)
add_subdirectory_if_kconfig(usb)
add_subdirectory_if_kconfig(watchdog)
add_subdirectory_if_kconfig(wifi)
add_subdirectory_if_kconfig(can)
add_subdirectory_if_kconfig(audio)
add_subdirectory_if_kconfig(hwinfo)
add_subdirectory_if_kconfig(espi)
add_subdirectory_if_kconfig(ps2)
add_subdirectory_if_kconfig(kscan)
add_subdirectory_if_kconfig(video)

add_subdirectory_ifdef(CONFIG_FLASH_HAS_DRIVER_ENABLED flash)
add_subdirectory_ifdef(CONFIG_SERIAL_HAS_DRIVER serial)
add_subdirectory_ifdef(CONFIG_BT               bluetooth)
add_subdirectory_ifdef(CONFIG_NETWORKING       net)
add_subdirectory_ifdef(CONFIG_NET_L2_ETHERNET  ethernet)
add_subdirectory_ifdef(CONFIG_ENTROPY_HAS_DRIVER entropy)
add_subdirectory_ifdef(CONFIG_SYS_CLOCK_EXISTS timer)
add_subdirectory_ifdef(CONFIG_NEURAL_NET_ACCEL neural_net)
add_subdirectory_ifdef(CONFIG_PTP_CLOCK        ptp_clock)
