# SPDX-License-Identifier: Apache-2.0

add_subdirectory(debug)
add_subdirectory(logging)
add_subdirectory_ifdef(CONFIG_LORAWAN              lorawan)
add_subdirectory_ifdef(CONFIG_BT                   bluetooth)
add_subdirectory_ifdef(CONFIG_CONSOLE_SUBSYS       console)
add_subdirectory_ifdef(CONFIG_SHELL                shell)
add_subdirectory_ifdef(CONFIG_CPLUSPLUS            cpp)
add_subdirectory_ifdef(CONFIG_DISK_ACCESS          disk)
add_subdirectory_ifdef(CONFIG_EMUL emul)
add_subdirectory(fs)
add_subdirectory(ipc)
add_subdirectory(mgmt)
add_subdirectory_ifdef(CONFIG_MCUBOOT_IMG_MANAGER  dfu)
add_subdirectory_ifdef(CONFIG_NET_BUF              net)
add_subdirectory(usb)
add_subdirectory(random)
add_subdirectory(storage)
add_subdirectory_ifdef(CONFIG_SETTINGS             settings)
add_subdirectory(fb)
add_subdirectory(portability)
add_subdirectory(pm)
add_subdirectory(stats)
add_subdirectory(task_wdt)
add_subdirectory(testsuite)
add_subdirectory(tracing)
add_subdirectory_ifdef(CONFIG_JWT jwt)
add_subdirectory(canbus)
add_subdirectory_ifdef(CONFIG_TIMING_FUNCTIONS     timing)
add_subdirectory_ifdef(CONFIG_DEMAND_PAGING        demand_paging)
add_subdirectory(modbus)
add_subdirectory(sd)
